--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>cqaso专栏后台系统</title>
 </head>
 <body>
 <div id="react-container"></div>
